# takio-decode-blob

./: Cargo.toml  blob.txt
src/: main.rs
