[package]
name = "decode-tx-list"
version = "0.1.0"
edition = "2021"

[dependencies]
reth-primitives = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "alloy-compat",
    "taiko",
] }
reth-evm-ethereum = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-evm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-rpc-types = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-revm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }
reth-chainspec = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false, features = [
    "taiko",
] }
reth-provider = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko", default-features = false }

# alloy
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-core = { version = "0.7.2", default-features = false }
alloy-dyn-abi = { version = "0.7.2", default-features = false }
alloy-json-abi = { version = "0.7.2", default-features = false }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }
reqwest_alloy = { package = "reqwest", version = "0.12.4", features = ["json"] }
alloy-rpc-types = { version = "0.1", default-features = false }
alloy-rpc-client = { version = "0.1", default-features = false }
alloy-consensus = { version = "0.1", default-features = false, features = [
    "serde",
] }
alloy-network = { version = "0.1", default-features = false, features = [
    "k256",
] }
alloy-contract = { version = "0.1", default-features = false }
alloy-eips = { version = "0.1", default-features = false, features = ["serde"] }
alloy-provider = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-transport-http = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-local = { version = "0.1", default-features = false }

serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.0" }
bincode = "1.3.3"
bytemuck = "1.13"
flate2 = "1.0.28"
rlp = "0.5.2"
hex = { version = "0.4.3" }
hex-literal = "0.4"
base64-serde = "0.7.0"
base64 = "0.22.1"
libflate = { version = "2.0.0" }
typetag = { version = "0.2.15" }
num_enum = "0.7.2"

# Error model
anyhow = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"

[patch.crates-io]
revm = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko" }
secp256k1 = { git = "https://github.com/CeciliaZ030/rust-secp256k1", branch = "sp1-patch" }
blst = { git = "https://github.com/CeciliaZ030/blst.git", branch = "v0.3.12-serialize" }
alloy-serde = { git = "https://github.com/CeciliaZ030/alloy.git", branch = "v0.1.4-fix" }
